Simplified set handling